# repopal

./: .gitignore  flows.md  pyproject.toml  service_components_migration.md  test.db
app/: worker.py
app/api/: routes.py
app/core/: config.py  database.py
app/repositories/: user.py
app/schemas/: user.py
repopal/: main.py  worker.py
repopal/api/: auth.py  deps.py  routes.py  webhook_routes.py
repopal/core/: config.py  database.py  security.py  service_manager.py
repopal/models/: service_connection.py  user.py
repopal/repositories/: base.py  service_connections.py  user.py
repopal/schemas/: changes.py  command.py  environment.py  service_handler.py  user.py  webhook.py
repopal/services/: command_selector.py  environment_manager.py  git_repo_manager.py  github.py  github_installation.py  llm.py  service_handler_factory.py  user.py  webhook_factory.py
repopal/services/commands/: __init__.py  aider.py  base.py  factory.py  find_replace.py  github_commands.py  hello_world.py
repopal/services/service_handlers/: base.py  github.py  slack.py
repopal/services/webhook_handlers/: base.py  github.py
tests/: conftest.py  end_to_end.py  test_api.py  test_github_handler.py  test_slack_handler.py  test_webhook_handlers.py
tests/integration/: test_command_selector_integration.py  test_environment_manager_integration.py  test_github_handler.py  test_slack_handler.py
tests/services/: test_command_selector.py  test_environment_manager.py
