[tool.poetry]
name = "repopal"
version = "0.1.0"
description = "FastAPI project with SQLAlchemy and Celery"
authors = ["Your Name <your.email@example.com>"]
packages = [{include = "repopal"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.110.0"
uvicorn = "^0.32.0"
sqlalchemy = "^2.0.22"
celery = "^5.3.4"
python-dotenv = "^1.0.0"
alembic = "^1.12.1"
pytest = "^8.3.3"
httpx = "^0.27.2"
redis = "^5.0.1"
pydantic-settings = "^2.1.0"
starlette = "^0.41.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
